<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".giao_dien.dang_nhap.DangKyActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/screenshot_2025_03_27_205702"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="50dp"/>

    <!-- Fullname -->
    <EditText
        android:id="@+id/edtFullname"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="15dp"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:background="@drawable/edit_text_border"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="16dp"/>

    <!-- Username (Email) -->
    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/edtFullname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="16dp"/>

    <!-- Password -->
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:background="@drawable/edit_text_border"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/edtUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="16dp"/>

    <!-- Confirm Password -->
    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:background="@drawable/edit_text_border"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="16dp"/>

    <!-- Register Button -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/register_button"
        android:textSize="16sp"
        android:backgroundTint="#1976D2"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"/>

    <!-- Google Register Button -->
    <Button
        android:id="@+id/btnGoogleRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/google_register"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="#FFFFFF"
        android:textAllCaps="false"
        android:elevation="3dp"
        android:translationZ="1dp"
        android:translationY="1dp"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_google"
        app:iconTint="@null"
        app:iconGravity="textStart"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="16dp"/>

    <!-- Đã có tài khoản? Đăng nhập -->
    <TextView
        android:id="@+id/tvLoginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_redirect"
        android:textColor="#1976D2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>