<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".giao_dien.dang_nhap.DangNhapActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/screenshot_2025_03_27_205702"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Username -->
    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <!-- Password -->
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUsername" />

    <!-- Forgot Password -->
    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="end|center_vertical"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#1976D2"
        android:textSize="16sp"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="#1976D2"
        android:text="@string/login_button"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForgotPassword" />

    <!-- Google Login Button -->
    <Button
        android:id="@+id/btnGoogleLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="3dp"
        android:text="@string/google_login_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:translationY="1dp"
        android:translationZ="1dp"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <!-- Register Button -->
    <Button
        android:id="@+id/btnViewRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="3dp"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:translationY="1dp"
        android:translationZ="1dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoogleLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>